--- a/index.html
+++ b/index.html
@@ -20,29 +20,29 @@
                   <a class="nav-link active" aria-current="page" href="#">HOME</a>
                   <a class="nav-link" href="#">ADD CONTACT</a>
                   <a class="nav-link" href="#">DELETE CONTACT</a>
-                  <a class="nav-link" href="#">VIEW CONTACT</a>
+                  <a class="nav-link" href="view_contacts.html">VIEW CONTACT</a>
                 </div>
               </div>
             </div>
           </nav>
     </section>
-    <section class="contact-form" style=" background:linear-gradient(108deg, #cff4de 0%, #eafff3 100%);>
-        <form>
+    <section class="contact-form" style=" background:linear-gradient(108deg, #cff4de 0%, #eafff3 100%);">
+        <form id="contactForm" onsubmit="saveContact(); return false;">
             <div class="form-group">
-              <label for="exampleFormControlInput1">FIRST NAME</label>
-              <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Enter your first name">
+              <label for="firstName">FIRST NAME</label>
+              <input type="text" class="form-control" id="firstName" placeholder="Enter your first name" required>
             </div>
             <div class="form-group">
-                <label for="exampleFormControlInput1">SUR NAME</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Enter your middle name">
+                <label for="surName">SUR NAME</label>
+                <input type="text" class="form-control" id="surName" placeholder="Enter your middle name" required>
               </div>
               <div class="form-group">
-                <label for="exampleFormControlInput1">LAST NAME</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Enter your last name">
+                <label for="lastName">LAST NAME</label>
+                <input type="text" class="form-control" id="lastName" placeholder="Enter your last name" required>
               </div>
             <div class="form-group">
-              <label for="exampleFormControlSelect1">LABEL</label>
-              <select class="form-control" id="exampleFormControlSelect1">
+              <label for="label">LABEL</label>
+              <select class="form-control" id="label">
                 <option>WORK</option>
                 <option>HOME</option>
                 <option>FAX</option>
@@ -51,14 +51,69 @@
               </select>
             </div>
             <div class="form-group">
-                <label for="exampleFormControlInput1">Email address</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                <label for="email">Email address</label>
+                <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
               </div>   
               <div class="form-group">
-                <label for="exampleFormControlInput1">DATE OF BIRTH</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Example:03/05/2004">
+                <label for="dob">DATE OF BIRTH</label>
+                <input type="text" class="form-control" id="dob" placeholder="Example: 03/05/2004" required>
               </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
     </section>
     <script src="assets/script.js"></script>
+    <script>
+        function saveContact() {
+            var firstName = document.getElementById('firstName').value;
+            var surName = document.getElementById('surName').value;
+            var lastName = document.getElementById('lastName').value;
+            var label = document.getElementById('label').value;
+            var email = document.getElementById('email').value;
+            var dob = document.getElementById('dob').value;
+
+            var contact = {
+                "firstName": firstName,
+                "surName": surName,
+                "lastName": lastName,
+                "label": label,
+                "email": email,
+                "dob": dob
+            };
+
+            // Check if contacts already exist
+            var contacts = JSON.parse(localStorage.getItem('contacts')) || [];
+            contacts.push(contact);
+
+            // Save to localStorage
+            localStorage.setItem('contacts', JSON.stringify(contacts));
+
+            // Update contacts displayed on the View Contacts page
+            updateViewContacts();
+
+            // Optional: Notify the user
+            alert("Contact saved successfully!");
+        }
+
+        function updateViewContacts() {
+            fetch('contacts.json')
+                .then(response => response.json())
+                .then(data => {
+                    var tableBody = document.getElementById('contactTableBody');
+                    tableBody.innerHTML = '';
+
+                    data.forEach(function(contact) {
+                        var row = `<tr>
+                                        <td>${contact.firstName}</td>
+                                        <td>${contact.surName}</td>
+                                        <td>${contact.lastName}</td>
+                                        <td>${contact.label}</td>
+                                        <td>${contact.email}</td>
+                                        <td>${contact.dob}</td>
+                                    </tr>`;
+                        tableBody.innerHTML += row;
+                    });
+                });
+        }
+    </script>
 </body>
 </html>
