--- a/view_contacts.html
+++ b/view_contacts.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="assets/style-viewcontact.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>View Contacts</title>
+    
+
 </head>
 <body>
     <h1>View Contacts</h1>
