--- a/view_contacts.html
+++ b/view_contacts.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="assets/style-viewcontact.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>View Contacts</title>
-    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap">
 
 </head>
 <body>
