updated the index page to add a link to the delete page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="navbar-nav">
                   <a class="nav-link" aria-current="page" href="#">HOME</a>
                   <a class="nav-link" href="#">ADD CONTACT</a>
-                  <a class="nav-link" href="#">DELETE CONTACT</a>
+                  <a class="nav-link" href="delete_contacts.html">DELETE CONTACT</a>
                   <a class="nav-link" href="view_contacts.html">VIEW CONTACT</a> <!-- Link to view_contacts.html page -->
                 </div>
               </div>
