--- a/delete_contacts.html
+++ b/delete_contacts.html
@@ -5,15 +5,36 @@
     <link rel="stylesheet" href="assets/style-deletecontact.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delete Contacts</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap">
     <link rel="stylesheet" href="assets\style-deletecontact.css">
+    ]
 </head>
 <body>
+    <section style="background:linear-gradient(108deg, #cff4de 0%, #eafff3 100%);" class="header">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background: linear-gradient(108deg, #cff4de 0%, #eafff3 100%);">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Contact Manager</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link" aria-current="page" href="#">HOME</a>
+                  <a class="nav-link" href="#">ADD CONTACT</a>
+                  <a class="nav-link" href="delete_contacts.html">DELETE CONTACT</a>
+                  <a class="nav-link" href="view_contacts.html">VIEW CONTACT</a> <!-- Link to view_contacts.html page -->
+                </div>
+              </div>
+            </div>
+          </nav>
+    </section>
     <div class="container">
         <h1>Delete Contacts</h1>
         <div id="contactsList"></div>
     </div>
 
     <script src="assets/script-deletecontact.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
