menu properly linked

--- a/view_contacts.html
+++ b/view_contacts.html
@@ -18,8 +18,8 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link" aria-current="page" href="#">HOME</a>
-                  <a class="nav-link" href="#">ADD CONTACT</a>
+                  <a class="nav-link" aria-current="page" href="index.html">HOME</a>
+                  <a class="nav-link" href="index.html">ADD CONTACT</a>
                   <a class="nav-link" href="delete_contacts.html">DELETE CONTACT</a>
                   <a class="nav-link" href="view_contacts.html">VIEW CONTACT</a> <!-- Link to view_contacts.html page -->
                 </div>
